# vscreen

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  deny.toml  docker-compose.yml  package.json  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
.husky/: pre-commit
benches/: audio_bench.rs  video_bench.rs
crates/vscreen/: Cargo.toml
crates/vscreen-audio/: Cargo.toml
crates/vscreen-audio/src/: capture.rs  encode.rs  lib.rs  pipeline.rs
crates/vscreen-cdp/: Cargo.toml
crates/vscreen-cdp/src/: client.rs  input.rs  lib.rs  protocol.rs  screencast.rs
crates/vscreen-core/: Cargo.toml
crates/vscreen-core/src/: config.rs  error.rs  event.rs  frame.rs  instance.rs  lib.rs  traits.rs
crates/vscreen-rtsp/: Cargo.toml
crates/vscreen-rtsp/src/: h264_packetizer.rs  handler.rs  health.rs  lib.rs  parser.rs  quality.rs  sdp.rs  server.rs  session.rs  transcoder.rs  transport.rs  vp9_packetizer.rs
crates/vscreen-rtsp/tests/: e2e_harness.rs  integration.rs
crates/vscreen-server/: Cargo.toml
crates/vscreen-server/src/: handlers.rs  lib.rs  lock_manager.rs  mcp.rs  memory.rs  metrics.rs  middleware.rs  router.rs  screenshot_watcher.rs  state.rs  supervisor.rs  vision.rs  ws.rs
crates/vscreen-server/src/mcp/: advisor.rs  captcha.rs  docs.rs  interaction.rs  mod.rs  navigation.rs  observation.rs  params.rs  scraper.js  scraper_kv.js  scraper_stats.js  scraper_table.js  session.rs  synthesis.rs  tests.rs  workflow.rs  workflow_interact.rs
crates/vscreen-server/tests/: mcp_integration.rs
crates/vscreen-transport/: Cargo.toml
crates/vscreen-transport/src/: lib.rs
crates/vscreen-transport/src/rtp/: mod.rs  sender.rs
crates/vscreen-transport/src/webrtc_session/: data_channel.rs  mod.rs  session.rs  signaling.rs  tracks.rs
crates/vscreen-video/: Cargo.toml
crates/vscreen-video/src/: convert.rs  decode.rs  encode.rs  h264_encode.rs  lib.rs  pipeline.rs
crates/vscreen/src/: dev.rs  main.rs  mcp_proxy.rs  synthesis.rs
crates/vscreen/tests/: api_test.rs  audio_pipeline_test.rs  video_pipeline_test.rs
crates/vscreen/tests/common/: fixtures.rs  harness.rs  mod.rs
docs/: deployment.md  dev-mode.md  devto-post.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cdp_message.rs  input_parser.rs  signaling_msg.rs
scripts/: deploy.sh  generate-fixtures.sh  package-release.sh  setup-dev.sh
tools/integration/: package.json
tools/integration/src/: harness.ts  scenarios.ts
tools/synthesis/: .gitignore  README.md  eslint.config.js  package.json  vite.config.ts
tools/synthesis/src/: app.css  hooks.server.ts
tools/synthesis/src/lib/: index.ts
tools/synthesis/src/lib/components/blocks/: CodeBlock.svelte  CodeBlock.test.ts  KeyValueList.svelte  KeyValueList.test.ts  MarkdownBlock.svelte  MarkdownBlock.test.ts  QuoteBlock.svelte  QuoteBlock.test.ts
tools/synthesis/src/lib/components/composite/: ComparisonTable.svelte  ComparisonTable.test.ts  NotificationBanner.svelte  NotificationBanner.test.ts
tools/synthesis/src/lib/components/content/: ArticleCard.svelte  ArticleCard.test.ts  CardGrid.svelte  CardGrid.test.ts  ContentList.svelte  ContentList.test.ts  HeroSection.svelte  HeroSection.test.ts  ImageGallery.svelte  ImageGallery.test.ts  SourceBadge.svelte  SourceBadge.test.ts  StatsRow.svelte  StatsRow.test.ts
tools/synthesis/src/lib/components/interactive/: Accordion.svelte  Accordion.test.ts  FilterBar.svelte  FilterBar.test.ts  Modal.svelte  Modal.test.ts  Timeline.svelte  Timeline.test.ts
tools/synthesis/src/lib/components/layout/: ComponentRenderer.svelte  ComponentRenderer.test.ts  PageShell.svelte  PageShell.test.ts  SectionError.svelte  SplitLayout.svelte  SplitLayout.test.ts  TabLayout.svelte  TabLayout.test.ts  componentRegistry.ts
tools/synthesis/src/lib/components/layout/sections/: CodeBlockSection.svelte  FilterBarSection.svelte  HeroSectionWrapper.svelte  MarkdownBlockSection.svelte  NotificationBannerSection.svelte  PaginationSection.svelte  ProgressBarSection.svelte  QuoteBlockSection.svelte
tools/synthesis/src/lib/components/nav/: Breadcrumbs.svelte  Breadcrumbs.test.ts  Pagination.svelte  Pagination.test.ts  Sidebar.svelte  Sidebar.test.ts
tools/synthesis/src/lib/components/realtime/: LiveFeed.svelte  LiveFeed.test.ts  StatusIndicator.svelte  StatusIndicator.test.ts
tools/synthesis/src/lib/components/viz/: BarChart.svelte  BarChart.test.ts  DataTable.svelte  DataTable.test.ts  LineChart.svelte  LineChart.test.ts  PieChart.svelte  PieChart.test.ts  ProgressBar.svelte  ProgressBar.test.ts
tools/synthesis/src/lib/server/: api.test.ts  pages.test.ts  pages.ts  persistence.test.ts  schemas.ts  ws.test.ts  ws.ts
tools/synthesis/src/lib/types/: index.ts
tools/synthesis/src/routes/: +page.server.ts  +page.svelte
tools/synthesis/src/routes/api/events/: +server.ts
tools/synthesis/src/routes/api/pages/: +server.ts
tools/synthesis/src/routes/api/pages/[id]/: +server.ts
tools/synthesis/src/routes/api/pages/[id]/push/: +server.ts
tools/synthesis/src/routes/api/pages/[id]/save/: +server.ts
tools/synthesis/src/routes/page/[slug]/: +page.server.ts  +page.svelte
tools/test-client/: client.ts  index.html  package.json  vite.config.ts
