[package]
name = "vscreen-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vscreen-core = { path = "../vscreen-core" }
audiopus = { workspace = true }
libpulse-binding = { workspace = true, optional = true }
libpulse-simple-binding = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[features]
default = []
pulse-audio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
